@@ -4,7 +4,6 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -12,21 +11,25 @@ public class CustomUserDetails implements UserDetails {
 
     private User user;
 
+    public User getUser() {
+        return user;
+    }
+
     public CustomUserDetails(User user) {
         this.user = user;
+    }
+
+    @Override
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        SimpleGrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + this.user.role.getName().toString());
+        return List.of(authority);
     }
 
     // @Override
     // public Collection<? extends GrantedAuthority> getAuthorities() {
     //     SimpleGrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + this.user.role.getName().toString());
-    //     return List.of(authority);
+    //     return Arrays.asList(authority);
     // }
-
-    @Override
-    public Collection<? extends GrantedAuthority> getAuthorities() {
-        SimpleGrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + this.user.role.getName().toString());
-        return Arrays.asList(authority);
-    }
 
 
     @Override
